--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Moniq CLI - .gitignore
+# Moniq.sh - .gitignore
 
 # =============================================================================
 # COMMERCIAL FILES (not for open source)
