update backend url endpoints

--- a/.gitignore
+++ b/.gitignore
@@ -91,6 +91,9 @@ Thumbs.db
 config.yaml
 .catops/
 
+# Admin tokens
+scripts/admin_token.txt
+
 # =============================================================================
 # OS SPECIFIC
 # =============================================================================
