Fix Helm chart: use appVersion instead of 'latest' tag for image

--- a/charts/catops/values.yaml
+++ b/charts/catops/values.yaml
@@ -90,7 +90,7 @@ image:
   repository: ghcr.io/mfhonley/catops/kubernetes-connector
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: ""  # Empty string uses appVersion from Chart.yaml (0.2.5)
 
 imagePullSecrets: []
 
