--- a/charts/catops/values.yaml
+++ b/charts/catops/values.yaml
@@ -14,7 +14,7 @@ auth:
 # ============================================================================
 backend:
   # URL вашего CatOps backend
-  url: "https://api.catops.io"
+  url: "https://api.catops.app"
 
 # ============================================================================
 # Collection Settings
