--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,8 +40,8 @@ jobs:
         env:
           VERSION: ${{ steps.version.outputs.version }}
         run: |
-          echo "🔨 Building Linux AMD64..."
-          GOOS=linux GOARCH=amd64 go build \
+          echo "🔨 Building Linux AMD64 (static)..."
+          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
             -ldflags "-X main.VERSION=$VERSION -s -w" \
             -trimpath \
             -o catops-linux-amd64 \
@@ -53,8 +53,8 @@ jobs:
         env:
           VERSION: ${{ steps.version.outputs.version }}
         run: |
-          echo "🔨 Building Linux ARM64..."
-          GOOS=linux GOARCH=arm64 go build \
+          echo "🔨 Building Linux ARM64 (static)..."
+          CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build \
             -ldflags "-X main.VERSION=$VERSION -s -w" \
             -trimpath \
             -o catops-linux-arm64 \
